--- a/misuzu/app/app.cabal
+++ b/misuzu/app/app.cabal
@@ -18,7 +18,7 @@ executable app
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5, warp, wai, http-types, bytestring
+  build-depends:       base >= 4.7 && < 5, warp, wai, http-types, bytestring, aeson
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
