--- a/rikka/.env.example
+++ b/rikka/.env.example
@@ -1,15 +1,17 @@
 
-NAS_PATH=//192.168.1.12/midas
-NAS_USER=rasp
+NAS_PATH=//192.168.12.13/home
+NAS_USER=midas
 NAS_PASS=pass
 
 DB_MIDAS_ROOT_USER=midas
 DB_MIDAS_ROOT_PASS=midaspass
 DB_MIDAS_BACKUP_USER=midas_backup
-DB_MIDAS_BACKUP_PASS=midas_backup_pass
+DB_MIDAS_BACKUP_PASS=midaspass
 
 DB_HOST=yui
 DB_DATABASE_NAME=midas
+
+ENCRYPTION_KEY=test_key
 
 SLACK_URL=https://example.com
 SLACK_USER=<@test>
