--- a/haruhi/.gitignore
+++ b/haruhi/.gitignore
@@ -1,7 +1,7 @@
 /node_modules
 /public/hot
 /public/storage
-/storage/*.key
+/storage
 /vendor
 .env
 .env.backup
@@ -16,4 +16,3 @@ yarn-error.log
 
 /public/js
 /public/css
-
