--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 
-
+DB_HOST=yui
 DB_ROOT_PASSWORD=pass
 
 DB_DATABASE=midas
@@ -8,4 +8,16 @@ DB_DATABASE_COLLATION=utf8mb4_bin
 
 DB_MIDAS_ROOT_USER=midas
 DB_MIDAS_ROOT_PASSWORD=midaspass
+DB_MIDAS_BACKUP_USER=midas_backup
+DB_MIDAS_BACKUP_PASSWORD=midaspass
+
+NAS_PATH=//192.168.12.13/home
+NAS_USER=midas
+NAS_PASS=pass
+
+ENCRYPTION_KEY=test_key
+
+SLACK_URL=https://example.com
+SLACK_USER=<@test>
+
 
