環境変数の移行

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ DB_MIDAS_ROOT_USER=midas
 DB_MIDAS_ROOT_PASSWORD=midaspass
 DB_MIDAS_BACKUP_USER=midas_backup
 DB_MIDAS_BACKUP_PASSWORD=midaspass
+DB_MIDAS_API_USER=midas_api
+DB_MIDAS_API_PASSWORD=midaspass
 
 NAS_PATH=//192.168.12.13/home
 NAS_USER=midas
