--- a/haruhi/.env.example
+++ b/haruhi/.env.example
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=yui
+DB_HOST=
 DB_PORT=3306
-DB_DATABASE=midas
-DB_USERNAME=midas
-DB_PASSWORD=midaspass
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
