DB ユーザーが設定できるようにした

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ DB_MIDAS_BACKUP_USER=midas_backup
 DB_MIDAS_BACKUP_PASSWORD=midaspass
 DB_MIDAS_API_USER=midas_api
 DB_MIDAS_API_PASSWORD=midaspass
+DB_MIDAS_ANALYZE_USER=midas_analyze
+DB_MIDAS_ANALYZE_PASSWORD=midaspass
 
 NAS_PATH=//192.168.12.13/home
 NAS_USER=midas
