--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ DB_MIDAS_API_PASSWORD=midaspass
 DB_MIDAS_ANALYZE_USER=midas_analyze
 DB_MIDAS_ANALYZE_PASSWORD=midaspass
 
+DB_METABASE_DATABASE=metabase
+DB_METABASE_ROOT_USER=metabase
+DB_METABASE_ROOT_PASSWORD=midaspass
+
 NAS_PATH=//192.168.12.13/home
 NAS_USER=midas
 NAS_PASS=pass
