task 用の DB ユーザ作成

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,6 @@ DB_DATABASE_COLLATION=utf8mb4_bin
 
 DB_MIDAS_ROOT_USER=midas
 DB_MIDAS_ROOT_PASSWORD=midaspass
-DB_MIDAS_BACKUP_USER=midas_backup
-DB_MIDAS_BACKUP_PASSWORD=midaspass
 DB_MIDAS_API_USER=midas_api
 DB_MIDAS_API_PASSWORD=midaspass
 DB_MIDAS_ANALYZE_USER=midas_analyze
@@ -18,6 +16,9 @@ DB_MIDAS_ANALYZE_PASSWORD=midaspass
 DB_METABASE_DATABASE=metabase
 DB_METABASE_ROOT_USER=metabase
 DB_METABASE_ROOT_PASSWORD=midaspass
+
+DB_TASK_USER=task
+DB_TASK_PASSWORD=midaspass
 
 NAS_PATH=//192.168.12.13/home
 NAS_USER=midas
