--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,8 +50,6 @@ services:
             - MYSQL_COLLATION=$DB_DATABASE_COLLATION
             - MYSQL_USER=$DB_MIDAS_ROOT_USER
             - MYSQL_PASSWORD=$DB_MIDAS_ROOT_PASSWORD
-            - DB_MIDAS_BACKUP_USER=$DB_MIDAS_BACKUP_USER
-            - DB_MIDAS_BACKUP_PASSWORD=$DB_MIDAS_BACKUP_PASSWORD
             - DB_MIDAS_API_USER=$DB_MIDAS_API_USER
             - DB_MIDAS_API_PASSWORD=$DB_MIDAS_API_PASSWORD
             - DB_MIDAS_ANALYZE_USER=$DB_MIDAS_ANALYZE_USER
@@ -59,6 +57,8 @@ services:
             - DB_METABASE_DATABASE=$DB_METABASE_DATABASE
             - DB_METABASE_ROOT_USER=$DB_METABASE_ROOT_USER
             - DB_METABASE_ROOT_PASSWORD=$DB_METABASE_ROOT_PASSWORD
+            - DB_TASK_USER=$DB_TASK_USER
+            - DB_TASK_PASSWORD=$DB_TASK_PASSWORD
         hostname: yui
         volumes:
             - ./yui/initdb.d:/docker-entrypoint-initdb.d
@@ -70,12 +70,11 @@ services:
             - NAS_PATH=$NAS_PATH
             - NAS_USER=$NAS_USER
             - NAS_PASS=$NAS_PASS
-            - DB_MIDAS_ROOT_USER=$DB_MIDAS_ROOT_USER
-            - DB_MIDAS_ROOT_PASS=$DB_MIDAS_ROOT_PASSWORD
-            - DB_MIDAS_BACKUP_USER=$DB_MIDAS_BACKUP_USER
-            - DB_MIDAS_BACKUP_PASS=$DB_MIDAS_BACKUP_PASSWORD
+            - DB_TASK_USER=$DB_TASK_USER
+            - DB_TASK_PASS=$DB_TASK_PASSWORD
             - DB_HOST=$DB_HOST
-            - DB_DATABASE_NAME=$DB_DATABASE
+            - DB_MIDAS_DATABASE_NAME=$DB_DATABASE
+            - DB_METABASE_DATABASE_NAME=$DB_METABASE_DATABASE
             - ENCRYPTION_KEY=$ENCRYPTION_KEY
             - SLACK_URL=$SLACK_URL
             - SLACK_USER=$SLACK_USER
