--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
             - DB_DATABASE=$DB_DATABASE
             - DB_USERNAME=$DB_MIDAS_API_USER
             - DB_PASSWORD=$DB_MIDAS_API_PASSWORD
+            - SANCTUM_STATEFUL_DOMAINS=testmidas.home.arpa
+            - SESSION_DOMAIN=testmidas.home.arpa
         volumes:
             - ./haruhi:/var/www/html
     eru:
