--- a/konata/conf.d/reverse_proxy.conf
+++ b/konata/conf.d/reverse_proxy.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-	server_name testmidas.home.arpa;
+	server_name ${APP_DOMAIN};
 
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
