--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,5 +26,5 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: user/midas-bocchi:latest
-          file: haruhi/Dockerfile
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi:latest
+          file: konata/Dockerfile
