--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,4 +28,4 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-haruhi:latest
           file: haruhi/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm/v7
