--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,5 +27,5 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-haruhi:latest
-          file: haruhi/Dockerfile
+          file: haruhi/DockerfileProduction
           platforms: linux/arm/v7
