--- a/haruhi/DockerfileProduction
+++ b/haruhi/DockerfileProduction
@@ -6,11 +6,9 @@ RUN apt-get update && apt-get install -y \
     npm \
     && docker-php-ext-install pdo_mysql
 
-RUN sed -i 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/000-default.conf \
-    a2enmod rewrite
+RUN sed -i 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/000-default.conf && a2enmod rewrite
 
 COPY * ./
-RUN npm install \
-    npm build production
+RUN npm install && npm build production
 
 RUN chown -R www-data /var/www/html
