--- a/haruhi/DockerfileProduction
+++ b/haruhi/DockerfileProduction
@@ -9,6 +9,6 @@ RUN apt-get update && apt-get install -y \
 RUN sed -i 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/000-default.conf && a2enmod rewrite
 
 COPY * ./
-RUN npm install && npm build production
+RUN npm install && npm run production
 
 RUN chown -R www-data /var/www/html
