--- a/haruhi/DockerfileProduction
+++ b/haruhi/DockerfileProduction
@@ -11,6 +11,7 @@ RUN sed -i 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available
 COPY ./ /var/www/html/
 RUN chown -R www-data /var/www/html
 USER www-data
+WORKDIR /var/www/html
 
 RUN composer install
 RUN npm run production
