--- a/haruhi/DockerfileProduction
+++ b/haruhi/DockerfileProduction
@@ -13,5 +13,8 @@ RUN chown -R www-data /var/www/html
 USER www-data
 WORKDIR /var/www/html
 
+RUN pwd
+RUN ls -al
+
 RUN composer install
 RUN npm run production
