--- a/haruhi/DockerfileProduction
+++ b/haruhi/DockerfileProduction
@@ -8,13 +8,8 @@ RUN apt-get update && apt-get install -y \
 
 RUN sed -i 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/000-default.conf && a2enmod rewrite
 
-COPY ./ /var/www/html/
+COPY ./haruhi /var/www/html/
 RUN chown -R www-data /var/www/html
-USER www-data
-WORKDIR /var/www/html
-
-RUN pwd
-RUN ls -al
 
 RUN composer install
 RUN npm run production
