--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,3 +29,36 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-haruhi:latest
           file: haruhi/DockerfileProduction
           platforms: linux/arm/v7
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-eru:latest
+          file: eru/Dockerfile
+          platforms: linux/arm/v7
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-rikka:latest
+          file: rikka/Dockerfile
+          platforms: linux/arm/v7
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-yui:latest
+          file: yui/Dockerfile
+          platforms: linux/arm/v7
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-konata:latest
+          file: konata/Dockerfile
+          platforms: linux/arm/v7
+
