APP 周りの環境変数追加

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+APP_ENV=local
+APP_DEBUG=true
+APP_URL=https://testmidas.home.arpa
+APP_DOMAIN=testmidas.home.arpa
+APP_KEY=
 
 DB_HOST=yui
 DB_ROOT_PASSWORD=pass
