/home/root から /app に移動させた

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
             - ENCRYPTION_KEY=$ENCRYPTION_KEY
             - DISCORD_URL=$DISCORD_URL
         volumes:
-         - ./rikka:/home/root
+         - ./rikka:/app
         privileged: true
         tty: true
 volumes:
