--- a/docker-compose-product.yml
+++ b/docker-compose-product.yml
@@ -72,7 +72,7 @@ services:
             - ENCRYPTION_KEY=$ENCRYPTION_KEY
             - DISCORD_URL=$DISCORD_URL
         volumes:
-         - ./rikka:/home/root
+         - ./rikka:/app
         privileged: true
         tty: true
 volumes:
