--- a/docker-compose-product.yml
+++ b/docker-compose-product.yml
@@ -2,6 +2,7 @@ version: '3.8'
 services:
     konata:
         image: firedial/midas-bocchi-konata
+        restart: always
         ports:
          - "443:443"
         volumes:
