--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 services:
     konata:
         build: ./konata
+        restart: always
         ports:
          - "443:443"
         volumes:
