--- a/.github/workflows/build_konata.yaml
+++ b/.github/workflows/build_konata.yaml
@@ -24,5 +24,5 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-konata:latest
-          file: konata/Dockerfile
+          file: konata/DockerfileProduction
           platforms: linux/arm/v7
