--- a/.github/workflows/build_rikka.yaml
+++ b/.github/workflows/build_rikka.yaml
@@ -24,5 +24,5 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-rikka:latest
-          file: rikka/Dockerfile
+          file: rikka/DockerfileProduction
           platforms: linux/arm/v7
