--- a/.github/workflows/build_yui.yaml
+++ b/.github/workflows/build_yui.yaml
@@ -24,5 +24,5 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-yui:latest
-          file: yui/Dockerfile
+          file: yui/DockerfileProduct
           platforms: linux/arm/v7
