--- a/.github/workflows/build_haruhi.yaml
+++ b/.github/workflows/build_haruhi.yaml
@@ -1,28 +1,56 @@
 name: haruhi image build
 
-on: [ workflow_dispatch ]
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths:
+      - "haruhi/**"
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
+      - name: Notify Discord (start)
+        run: |
+          curl -H "Content-Type: application/json" \
+          -X POST \
+          -d '{
+            "content": "[github][haruhi] build start"
+          }' \
+          ${{ secrets.DISCORD_WEBHOOK_URL }}
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-haruhi:latest
           file: haruhi/DockerfileProduction
           platforms: linux/arm/v7
+      - name: Notify Discord (success)
+        if: ${{ success() }}
+        run: |
+          curl -H "Content-Type: application/json" \
+          -X POST \
+          -d '{
+            "content": "[github][haruhi] build successed"
+          }' \
+          ${{ secrets.DISCORD_WEBHOOK_URL }}
+      - name: Notify Discord (fail)
+        if: ${{ failure() }}
+        run: |
+          curl -H "Content-Type: application/json" \
+          -X POST \
+          -d '{
+            "content": "[github][haruhi] build failed"
+          }' \
+          ${{ secrets.DISCORD_WEBHOOK_URL }}
