--- a/.github/workflows/build_haruhi.yaml
+++ b/.github/workflows/build_haruhi.yaml
@@ -9,48 +9,11 @@ on:
       - "haruhi/**"
 
 jobs:
-  docker:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Notify Discord (start)
-        run: |
-          curl -H "Content-Type: application/json" \
-          -X POST \
-          -d '{
-            "content": "[github][haruhi] build start"
-          }' \
-          ${{ secrets.DISCORD_WEBHOOK_URL }}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-haruhi:latest
-          file: haruhi/DockerfileProduction
-          platforms: linux/arm/v7
-      - name: Notify Discord (success)
-        if: ${{ success() }}
-        run: |
-          curl -H "Content-Type: application/json" \
-          -X POST \
-          -d '{
-            "content": "[github][haruhi] build successed"
-          }' \
-          ${{ secrets.DISCORD_WEBHOOK_URL }}
-      - name: Notify Discord (fail)
-        if: ${{ failure() }}
-        run: |
-          curl -H "Content-Type: application/json" \
-          -X POST \
-          -d '{
-            "content": "[github][haruhi] build failed"
-          }' \
-          ${{ secrets.DISCORD_WEBHOOK_URL }}
+  plan:
+    uses: firedial/midas-bocchi/.github/workflows/build.yaml@main
+    with:
+      name: haruhi
+    secrets:
+      DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
