--- a/.github/workflows/build_haruhi.yaml
+++ b/.github/workflows/build_haruhi.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   plan:
-    uses: firedial/midas-bocchi/.github/workflows/build.yaml@build_notify_auto
+    uses: firedial/midas-bocchi/.github/workflows/build_common.yaml@build_notify_auto
     with:
       name: haruhi
     secrets:
