直アクセスでも表示されるように修正

--- a/konata/conf.d/reverse_proxy.conf
+++ b/konata/conf.d/reverse_proxy.conf
@@ -9,7 +9,13 @@ server {
         proxy_pass http://eru:3000/;
     }
 
+    location /api/ {
+        proxy_pass http://haruhi;
+    }
+
     location / {
         proxy_pass http://haruhi;
+        proxy_intercept_errors on;
+        error_page 404 = /index.html;
     }
 }
