cd が必要かもしれない

--- a/.github/workflows/build_nagisa.yaml
+++ b/.github/workflows/build_nagisa.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: elm download
         run: curl -L -o elm.gz https://github.com/elm/compiler/releases/download/0.19.1/binary-for-linux-64-bit.gz && gunzip elm.gz && chmod +x elm && mv elm /usr/local/bin/
+      - name: change directory
+        run: cd nagisa
       - name: build file
         run: elm make nagisa/src/Main.elm --output=../dist/main.js
       - name: Upload artifacts
