--- a/.github/workflows/build_nagisa.yaml
+++ b/.github/workflows/build_nagisa.yaml
@@ -13,11 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: elm download
-        run: curl -L -o elm.gz https://github.com/elm/compiler/releases/download/0.19.1/binary-for-linux-64-bit.gz && gunzip elm.gz && chmod +x elm && mv elm /usr/local/bin/
-      - name: change directory
-        run: cd nagisa
+        run: |
+          curl -L -o elm.gz https://github.com/elm/compiler/releases/download/0.19.1/binary-for-linux-64-bit.gz
+          gunzip elm.gz
+          chmod +x elm
+          mv elm /usr/local/bin/
       - name: build file
-        run: elm make src/Main.elm --output=../dist/main.js
+        run: |
+          cd nagisa
+          elm make src/Main.elm --output=../dist/main.js
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
