--- a/.github/workflows/build_nagisa.yaml
+++ b/.github/workflows/build_nagisa.yaml
@@ -26,9 +26,9 @@ jobs:
           cd nagisa
           elm make src/Main.elm --optimize --output=elm.js
           uglifyjs elm.js --compress "pure_funcs=[F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9],pure_getters,keep_fargs=false,unsafe_comps,unsafe" | uglifyjs --mangle --output elm.min.js
-          mv elm.min.js ../dist/main.js
+          mv elm.min.js main.js
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build_nagisa
-          path: dist/main.js
+          path: nagisa/main.js
