--- a/.github/workflows/build_nagisa.yaml
+++ b/.github/workflows/build_nagisa.yaml
@@ -38,7 +38,7 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v4
-      - name: Download math result for job 2
+      - name: download nagisa build
         uses: actions/download-artifact@v4
         with:
           name: build_nagisa
