--- a/.github/workflows/build_nagisa.yaml
+++ b/.github/workflows/build_nagisa.yaml
@@ -42,6 +42,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build_nagisa
+      - name: check
+        run: ls -al
       - name: move
         run: mv main.js haruhi/public/main.js
       - name: Set up QEMU
@@ -57,6 +59,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-haruhi:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-test:latest
           file: haruhi/DockerfileProduction
           platforms: linux/arm/v7
