--- a/.github/workflows/build_nagisa.yaml
+++ b/.github/workflows/build_nagisa.yaml
@@ -57,6 +57,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          context: .
           # tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-haruhi:latest
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-test:latest
           file: haruhi/DockerfileProduction
