--- a/.github/workflows/build_nagisa.yaml
+++ b/.github/workflows/build_nagisa.yaml
@@ -58,7 +58,6 @@ jobs:
         with:
           push: true
           context: .
-          # tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-haruhi:latest
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-test:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-haruhi:latest
           file: haruhi/DockerfileProduction
           platforms: linux/arm/v7
