ココも変えないといけなかった

--- a/.github/workflows/build_haruhi.yaml
+++ b/.github/workflows/build_haruhi.yaml
@@ -44,7 +44,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: nagisa
     steps:
       - uses: actions/checkout@v4
       - name: download nagisa build
