名前を入れていなかった

--- a/.github/workflows/build_haruhi.yaml
+++ b/.github/workflows/build_haruhi.yaml
@@ -18,7 +18,7 @@ jobs:
           curl -H "Content-Type: application/json" \
           -X POST \
           -d '{
-            "content": "[${{ inputs.name }}] build start"
+            "content": "[haruhi] build start"
           }' \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
       - uses: actions/checkout@v4
@@ -76,7 +76,7 @@ jobs:
           curl -H "Content-Type: application/json" \
           -X POST \
           -d '{
-            "content": "[${{ inputs.name }}] build successed"
+            "content": "[haruhi] build successed"
           }' \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
       - name: Notify Discord (fail)
@@ -85,6 +85,6 @@ jobs:
           curl -H "Content-Type: application/json" \
           -X POST \
           -d '{
-            "content": "[${{ inputs.name }}] build failed"
+            "content": "[haruhi] build failed"
           }' \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
