--- a/.github/workflows/build_haruhi.yaml
+++ b/.github/workflows/build_haruhi.yaml
@@ -48,7 +48,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: nagisa_fix
+          ref: main
       - name: download nagisa build
         uses: actions/download-artifact@v4
         with:
