ベースイメージを作るようにした

--- a/haruhi/DockerfileProduction
+++ b/haruhi/DockerfileProduction
@@ -1,16 +1,5 @@
-FROM php:8.2-apache
-COPY --from=composer:2.8.1 /usr/bin/composer /usr/bin/composer
-RUN apt-get update && apt-get install -y \
-    git \
-    unzip \
-    npm \
-    && docker-php-ext-install pdo_mysql
-
-RUN sed -i 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/000-default.conf && a2enmod rewrite
+FROM firedial/midas-bocchi-haruhi-base:latest
 
 COPY ./haruhi /var/www/html/
+RUN mv -n /tmp/vendor /var/www/html/ && composer dump-autoload
 RUN chown -R www-data /var/www/html
-
-RUN composer install
-RUN npm install
-RUN npm run production
