--- a/.github/workflows/build_haruhi_base.yaml
+++ b/.github/workflows/build_haruhi_base.yaml
@@ -27,7 +27,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          context: .
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/midas-bocchi-haruhi-base:latest
           file: haruhi/DockerfileProductionBase
           platforms: linux/arm/v7
@@ -37,7 +36,7 @@ jobs:
           curl -H "Content-Type: application/json" \
           -X POST \
           -d '{
-            "content": "[haruhi] build successed"
+            "content": "[haruhi base] build successed"
           }' \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
       - name: Notify Discord (fail)
@@ -46,6 +45,6 @@ jobs:
           curl -H "Content-Type: application/json" \
           -X POST \
           -d '{
-            "content": "[haruhi] build failed"
+            "content": "[haruhi base] build failed"
           }' \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
