--- a/haruhi/DockerfileProductionBase
+++ b/haruhi/DockerfileProductionBase
@@ -9,4 +9,5 @@ RUN apt-get update && apt-get install -y \
 RUN sed -i 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/000-default.conf && a2enmod rewrite
 
 COPY ./haruhi/composer.* /tmp/composer.*
+ENV COMPOSER_ALLOW_SUPERUSER 1
 RUN composer install --no-scripts --no-autoloader -d /tmp
