--- a/.github/workflows/url_test.yaml
+++ b/.github/workflows/url_test.yaml
@@ -1,3 +1,5 @@
+name: url test
+
 on:
   workflow_dispatch:
 
@@ -7,4 +9,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker compose -f compose_test.yaml up -d --wait
-      - run: docker compose exec -T tamako php /app/main.php
+      - run: docker compose -f compose_test.yaml exec -T tamako php /app/main.php
