デバッグその3

--- a/.github/workflows/url_test.yaml
+++ b/.github/workflows/url_test.yaml
@@ -11,3 +11,4 @@ jobs:
       - run: docker compose -f compose_test.yaml up -d --wait
       - run: docker compose -f compose_test.yaml exec -T haruhi ls /var/www/html/storage/framework/sessions/
       - run: docker compose -f compose_test.yaml exec -T tamako php /app/main.php
+      - run: docker compose -f compose_test.yaml exec -T haruhi ls /var/www/html/storage/framework/sessions/
