--- a/.github/workflows/url_test.yaml
+++ b/.github/workflows/url_test.yaml
@@ -12,6 +12,7 @@ jobs:
       - run: docker compose -f compose_test.yaml exec -T haruhi ls -al /var/www/html/storage
       - run: docker compose -f compose_test.yaml exec -T haruhi chmod -R 777 /var/www/html/storage
       - run: docker compose -f compose_test.yaml exec -T haruhi chown -R www-data:www-data /var/www/html/storage
+      - run: docker compose -f compose_test.yaml exec -T haruhi touch /var/www/html/storage/framework/sessions/test
       - run: docker compose -f compose_test.yaml exec -T haruhi ls -al /var/www/html/storage
       - run: docker compose -f compose_test.yaml exec -T tamako php /app/main.php
       - run: docker compose -f compose_test.yaml exec -T haruhi ls -al /var/www/html/storage/framework/sessions
