--- a/.github/workflows/url_test.yaml
+++ b/.github/workflows/url_test.yaml
@@ -21,3 +21,5 @@ jobs:
       - run: docker compose -f compose_test.yaml exec -T haruhi php -r "\$result = file_put_contents('/var/www/html/storage/framework/sessions/test2', 'hello'); var_dump(\$result); var_dump(error_get_last());"
       - run: docker compose -f compose_test.yaml exec -T haruhi php -r "echo posix_getpwuid(posix_geteuid())['name'];"
       - run: docker compose -f compose_test.yaml exec -T haruhi php -i | grep open_basedir
+      - run: docker compose -f compose_test.yaml exec -T haruhi sh -c "php -r \"file_put_contents('/var/www/html/storage/framework/sessions/test2', 'hello');\" ls -la /var/www/html/storage/framework/sessions/ "
+      - run: docker compose -f compose_test.yaml exec -T haruhi ls -al /var/www/html/storage/framework/sessions
