--- a/.github/workflows/url_test.yaml
+++ b/.github/workflows/url_test.yaml
@@ -23,3 +23,10 @@ jobs:
       - run: docker compose -f compose_test.yaml exec -T haruhi php -i | grep open_basedir
       - run: docker compose -f compose_test.yaml exec -T haruhi sh -c "php -r \"file_put_contents('/var/www/html/storage/framework/sessions/test2', 'hello');\" ls -la /var/www/html/storage/framework/sessions/ "
       - run: docker compose -f compose_test.yaml exec -T haruhi ls -al /var/www/html/storage/framework/sessions
+      - run: >
+          docker compose -f compose_test.yaml exec -T haruhi php artisan tinker
+          --execute="echo 'driver: ' . config('session.driver') . PHP_EOL;
+          echo 'secure: ' . var_export(config('session.secure'), true) . PHP_EOL;
+          echo 'same_site: ' . config('session.same_site') . PHP_EOL;
+          echo 'domain: ' . config('session.domain') . PHP_EOL;
+          echo 'app_env: ' . config('app.env') . PHP_EOL;"
