--- a/.github/workflows/build_haruhi.yaml
+++ b/.github/workflows/build_haruhi.yaml
@@ -42,6 +42,9 @@ jobs:
           name: build_nagisa
           path: nagisa/main.js
 
+  test:
+    uses: firedial/midas-bocchi/.github/workflows/url_test.yaml@main
+
   deploy:
     runs-on: ubuntu-latest
     needs: nagisa
