--- a/.github/workflows/build_haruhi.yaml
+++ b/.github/workflows/build_haruhi.yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test:
-    uses: firedial/midas-bocchi/.github/workflows/url_test.yaml@create_ci
+    uses: firedial/midas-bocchi/.github/workflows/url_test.yaml@main
 
   nagisa:
     runs-on: ubuntu-latest
